project.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
   }
   html {
    height:100%;
    overflow-x: hidden; 
    overflow-y: hidden;
    min-width:350px;
   }
   body {
    height: 100%;
    width:100%;
    /* min-width:500px; */
    font:  bold 12px/30px Georgia, sans-serif;
    /* background-color:#4056a1; */
    /* background:url('img/joshua_tree.jpg'); */
    background: linear-gradient(0DEG, transparent, rgba(6, 31, 55, 0.5)), url('img/ElCapitanIn.jpeg');
    /* background: url('img/joshua_tree.jpg'); */
    background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
   }
   a {
    text-decoration: none;
   }
   li {
    list-style: none;
   }
   section {
    height:calc(100% - 90px);

   }
   .navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px;
    background-color: transparent;
    color: #efe2ba;
    padding-right: 50px;
    padding-left: 50px;
    /* margin-bottom: 5px; */
    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
   }
   .nav-links a {
    color: #efe2ba;
   }
   /* LOGO */
   .logo {
    display: inline-block;
    vertical-align: top;
    font-size: 18px;
    width: auto;
    height: 50px;
    /* margin-right: 20px;
    margin-top: 0px;    /* if you want it vertically middle of the navbar. */
}
      /* NAVBAR MENU */
      .menu {
        display: flex;
        gap: 1em;
        font-size: 18px;
       }
       .menu li:hover {
        background-color: #f13c20;
        border-radius: 5px;
        transition: 0.3s ease;
        color:#efe2ba;
       }
       .menu li {
        padding: 5px 14px;
       }
       /* DROPDOWN MENU */
       /* .projects {
        position: relative; 
       } */
       .dropdown {
        background-color: #f13c20;
        padding: 1em 0;
        position: absolute; /*WITH RESPECT TO PARENT*/
        display: none;
        border-radius: 8px;
        top: 35px;
        right: 20px;
       }
       .dropdown li + li {
        margin-top: 10px;
       }
       .dropdown li {
        padding: 0.5em 1em;
        width: 15em;
        text-align: center;
       }
       .dropdown li:hover {
        background-color: #d79922;
       }
       /* .projects:hover .dropdown {
        display: block;
       } */
    /*RESPONSIVE NAVBAR MENU STARTS*/
    /* CHECKBOX HACK */
    input[type=checkbox]{
        display: none;
       } 
       /*HAMBURGER MENU*/
       .hamburger {
        display: none;
        font-size: 24px;
        user-select: none;
       }
       /* APPLYING MEDIA QUERIES */
       @media (max-width: 900px) { /*768px*/
       .menu { 
        display:none;
        position: absolute;
        margin-top:15px;
        background-color:#d79922;
        right: 0;
        left: 0;
        text-align: center;
        padding: 16px 0;
       }
       .menu li:hover {
        /* display: inline-block; */
        background-color:#f13c20;
        transition: 0.3s ease;
       }
       .menu li + li {
        margin-top: 12px;
       }
       input[type=checkbox]:checked ~ .menu{
        display: block;
       }
       .hamburger {
        display: block;
       }
       .dropdown {
        /* left: auto;
        right:auto; */
        top: 30px;
        transform: translateX(35%);
        right:calc(100% - 175px);
       }
       /* .dropdown li:hover {
        background-color: #f13c20;
       } */
       }
    
       /* Responsive Projects */
    input[type=checkbox]{
        display: none;
       } 
       /*HAMBURGER MENU*/
       .checkbox_projects {
        user-select: none;
       }
    
       input[type=checkbox]:checked ~ .dropdown{
        display: block;
       }
       ul.dropdown {
        /* left: auto;
        right:auto; */
        top: 30px;
        transform: translateX(35%);
        /* position:absolute; */
        /* left:-50%; */
       }

/* PAGE CONTENT */
.projects {
    background-color: transparent;
    overflow:auto;
    margin-right: 0%;
    margin-left: 0%;
            /* background-color:#4056a1; */
}
.photo {
    height: 100%;
}
.non_photo {
    /* height: 100%; */
    /* width:100%; */
    min-height:100%;
    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)); */
    width:100%;
    padding-top: 5%;
    padding-bottom: 5%;
}
.text {
    /* height: 100%; */
    /* width:100%; */
    min-height:90%;
    background: linear-gradient(rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95));
    margin-right: 20%;
    margin-left: 20%;
    padding-top: 25px;
    padding-bottom: 25px;
    border-radius:50px;
}
.projects h1 {
    color:white;
    text-align: center;
    padding-top: 25px;
    padding-bottom: 25px;
    font:  bold 50px Georgia, sans-serif;
    text-shadow: 0px 0px 10px black;
}
.projects h2 {
    color:black;
    margin-left: 5%;
    margin-right: 5%;
    /* padding: 10px; */
    font: Georgia, sans-serif;
    /* text-shadow: 0px 0px 20px black; */
}

.location a {
    position:absolute;
    bottom:0;
    right:0;
    text-decoration: none;
    color: #efe2ba;
    background-color: #D79922;
    border-radius: 5px;
    transition: 0.3s ease;
    margin-right:5px;
    margin-bottom:5px;
    padding: 2px;
}
.project_links {
    text-align:center;
    padding:20px;
}
.project_links ul {
    text-align:center;
    padding:20px;
}
.project_links li {
    padding-bottom:20px;
}
.project_links a {
    color:#4056A1;
    text-decoration: underline;
    font-size:3em;
}
.project_html {
    color:black;
}

.location a {
    position:absolute;
    bottom:0;
    right:0;
    text-decoration: none;
    color: #efe2ba;
    background-color: #D79922;
    border-radius: 5px;
    transition: 0.3s ease;
    margin-right:5px;
    margin-bottom:5px;
    padding: 2px;
}
@media (max-width: 900px) { /*768px*/
    .projects h1 {
        color:white;
        text-align: center;
        padding-top: 25px;
        padding-bottom: 25px;
        font:  bold 30px Georgia, sans-serif;
        text-shadow: 0px 0px 20px black;
    }
    .text {
        /* height: 100%; */
        /* width:100%; */
        min-height:90%;
        background: linear-gradient(rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95));
        margin-right: 5px;
        margin-left: 5px;
        padding-top: 25px;
        padding-bottom: 25px;
        border-radius:50px;
    }
}
.submit {
    background-color: #F13C20;
    border-radius: 12px;
    border: 0;
    box-sizing: border-box;
    color: #eee;
    cursor: pointer;
    font-size: 18px;
    height: 50px;
    margin-top: 10px;
    margin-bottom: 10px;
    outline: 0;
    text-align: center;
    width: 100%;
  }

